--- a/.github/workflows/scheduled-run.yml
+++ b/.github/workflows/scheduled-run.yml
@@ -22,4 +22,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run bot script
-      run: python posts-bot.py
+      run: python generate_quote.py
